@startuml Entity relations
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  *_id : string <<generated>>
  --
  *email : text
  *password : text
  *firstName : text
  *lastName: text
  *services : { G+, FB }
  *role : enum
  *picture : text
  *invitedBy: text <<FK>>
  *nReviews: number
  *nBeenVoted: Number
  *savedArticles: [<<FK>>]
  *level: Number
}

entity "Experience" as exp {
  *_id : string <<generated>>
  --
  *userId : text <<FK>>
  *exp: number
  *action: actionId
  *createdAt
}

entity "Saved" as saved {
  *_id : string <<generated>>
  --
  *addedBy : text <<FK>>
  *articleId : text <<FK>>
}

entity "Invitation" as inv {
  *_id : string <<generated>>
  --
  *invitedBy : text <<FK>>
  *invitedEmail: text
  *createdAt: date
  *verificationCode: Number
  *isValid: Boolean
  --
  - TTL 48 hours
}

entity "Vote" as vote {
  *_id : string <<generated>>
  --
  *addedBy : text <<FK>>
  --
  One of following is required
  --
  *userId: text <<FK>>
  ' *articleId: text <<FK>>
  *claimId: text <<FK>>
  *reviewId: text <<FK>>
  --
  ' *text: Text
  *rating: Number {-1,0,1}
  *createdAt: date
}

entity "Article" as article {
  *_id : text <<generated>>
  --
  *claims: [<<FK>>,...]
  *addedBy : text <<FK>>
  *title: text
  *text : text
  *sourceUrl: text
  *sourceType : enum
  *lang : text
  *nBeenVoted: Number
  *nSaved: Number
}

entity "Claim" as claim {
  *_id : text <<generated>>
  --
  *addedBy: text <<FK>>
  *priority: number
  *articleId : text <<FK>>
  *articles: [<<FK>>,...]
  *text : text
  *nBeenVoted: Number
  *nPositiveVotes: number
  *nNegativeVotes: number
}

entity "Review" as review {
  *_id : text <<generated>>
  --
  *userId : text <<FK>>
  *claimId: text <<FK>>
  *articleId: text <<FK>>
  *text: text
  *vote: enum {pos, neg, neut, no_info}
  *links: [String]
  *nBeenVoted: Number
  *nPositiveVotes: number
  *nNegativeVotes: number
  *nNeutralVotes: number
}

entity "Review comment" as reviewComment {
  *_id : text <<generated>>
  --
  *addedBy : text <<FK>>
  *reviewId: text <<FK>>
  *text: text
  *proofUrls: array [text] 
  *nBeenVoted: Number
}

user ||..o{ article
user ||..o{ inv
user ||..o{ saved
user ||..o{ vote
user ||..o{ exp
article }o..o{ claim
article ||..o{ saved
' article ||..o{ vote
user ||..o{ review
' user ||..o{ vote
claim ||..o{ review
claim }o..|| user
claim ||..o{ vote
review ||..o{ reviewComment
review ||..o{ vote
@enduml